Fix extended masthead bleeding onto global navb

--- a/wonder/romeo/static/assets/common/directives/_global-navigation.scss
+++ b/wonder/romeo/static/assets/common/directives/_global-navigation.scss
@@ -60,6 +60,7 @@ $global-nav-width: 320px;
   overflow: hidden;
 
   .container {
+    overflow: hidden;
     @include transition-transform($global-nav-width);
     pointer-events: none;
   }
